--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,10 @@
               "buildTarget": "portfolio-dev:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options":{
+            "port": 4300
+          }
         },
         "extract-i18n": {
           "builder": "@angular/build:extract-i18n"
@@ -86,5 +89,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "df1d460f-b588-4b0c-917b-a8d40bab7bb6"
   }
 }
